# lab8

./: .travis.yml  CMakeLists.txt
List/: List.h
StackList/: StackList.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TStack.cpp
